# reward-yourself-back

./: .gitignore  README.md  manage.py  pyproject.toml
core/: admin.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
core/fixtures/: user_admin.json
core/migrations/: 0001_initial.py  0002_alter_user_coins.py  0003_task.py  0004_task_user.py  0005_alter_task_final_duration.py  0006_alter_task_title.py  0007_reward.py  0008_alter_reward_user_alter_task_user.py
reward_yourself/: asgi.py  settings.py  urls.py  wsgi.py
